--- a/zyria.conf
+++ b/zyria.conf
@@ -1,59 +1,87 @@
+[Logging]
+
+ColorConsole = True
+ColorFile = True
+
 [Server]
 
 # HTTP port for the  server. Default is 5050
 Port = 5050
-
-[LLM Manager]
-
-ModelPath			= models/Llama-3.2-3B-Instruct-Q5_K_M.gguf 
-MaxTokens			= 60
-ContextTokens		= 4096
-GPULayers			= 30
-Threads				= 10
-
-[Generator]
-
-# Token limit told to the LLM
-MaxTokens = 40
-# Max number of channel members to report to 
-MaxMemberTracking	= 5
-# Number of channel members to report to when greater than MaxMemberTracking
-TruncatedMembers = 4
-# Time a bot keeps their attention after being addressed or mentioned
-AttentionTimeout = 15
-# Chance bot will not ignore other bots when not explicitly addressed or mentioned
-BotToBotReplyChance = 100
-
-# Expansion names, in chronological order
-Expansions = vanilla World of Warcraft, World of Warcraft: The Burning Crusade, World of Warcraft: Wrath of the Lich King
-
-# Standard prompt for reply messages 
-PromptReply = You are a single roleplaying character in {expansion}. Your name is {bot_name}. You are a level {bot_level} {bot_gender} {bot_race} {bot_class}{bot_guild}. The player {other_name} is a {other_level} {other_gender} {other_race} {other_class}{other_guild}. {environment} Stay in character and respond as {bot_name} only. Do not include any explanations, meta-commentary, or chain-of-thought processes. Your response must be under {max_tokens} tokens and directed exclusively to the person addressed. Only provide dialogue as {bot_name}.
-
-# Alternate prompts for new messages
-PromptNew = You are a single roleplaying character in {expansion}. Your name is {bot_name}. You are a level {bot_level} {bot_gender} {bot_race} {bot_class}{bot_guild}. {environment} Say something in-character as {bot_name} in order to initiate a conversation with the other players in the chat. Do not include any explanations, meta-commentary, or chain-of-thought processes. Your message must be under {max_tokens}. Only provide dialogue as {bot_name}.
-
-PromptContinue = You are a single roleplaying character in {expansion}. Your name is {bot_name}. You are a level {bot_level} {bot_gender} {bot_race} {bot_class}{bot_guild}. {environment} Say something in-character as {bot_name} continuing the previous conversation with the other players in the chat. Do not include any explanations, meta-commentary, or chain-of-thought processes. Your message must be under {max_tokens}. Only provide dialogue as {bot_name}.
-
-# Prompt for bot to NPC chat
-PromptRpg = In {expansion} in {bot_location} stands {bot_name}, a level {bot_level} {bot_gender} {bot_race} {bot_class}. Standing nearby is {unit_type} {unit_name} {unit_subname} a level {unit_level} {unit_gender} {unit_race} {unit_faction} {unit_class}. Do not include any explanations, meta-commentary, or chain-of-thought processes. Answer as a roleplaying character. Your response must be under {max_tokens} tokens.
-
-# Text for building the location part of the prompt
-PromptLocation = Your location is {bot_location}.
-PromptLocationParty = {other_name} is in a party with you in {bot_location}, you are playing together.
-PromptLocationNearby = You and {other_name} are both in {bot_location}, but not grouped.
-PromptLocationApart = {other_name} is off far away in {other_location}, you are not playing with them. Do not talk as if you are in the same location as {other_name}.
-
-# Text for reporting channel members in the prompt
-PromptChannel = You are communicating {channel_name} with {channel_members}.
-
-PromptContext = Previous Conversation:[{context}]
-
-# Text for differentiating between direct communication and mentioning names
-PromptSpeakingTo = {other_name} is speaking to {directed_names} now --
-PromptMentioned = {other_name} is speaking to {directed_names} now, chime in to {other_name} on what is being said --
+# How long server will wait for queued requests to be processed by LLM
+ServerTimeout = 200
 
 [Memory Manager]
 
-# Directory to store bot memory files
+# Directory to store character memory files
 MemoryDir = memory
+
+[LLM Manager]
+
+ModelPath		= models/Llama-3.1-Techne-RP-8b-v1_Q4_K_M.gguf
+ContextTokens	= 8192
+GPULayers		= -1
+Threads			= 6
+
+# Blocked characters to tokenize for improved LLM output quality
+BlockedTokens = -()[]*<>/\&^#@_|`~$;
+
+BaseTokensPerSpeaker = 30
+TokensDialogueFactor = 1.5
+MinTokens = 50
+MaxTokens = 150
+
+[Prompt Builder]
+
+# Expansion names, comma separated in chronological order
+Expansions = vanilla World of Warcraft,World of Warcraft: The Burning Crusade,World of Warcraft: Wrath of the Lich King
+GuildPromptContextLines = 20
+RaidPromptContextLines = 25
+PartyPromptContextLines = 20
+WorldPromptContextLines = 15
+
+[Generator]
+
+# Length of time in seconds the generator waits to collect requests for batching
+BatchCycleTime = 4.0
+
+[Conversation Manager]
+
+QueueUpperLimit = 8
+QueueLowerLimit = 3
+QueueSleepRandomHigh = 20
+QueueSleepRandomLow = 10
+QueueSleepWakeTime = 45
+OutputMaxPauseTime = 5
+FatigueMultiplier = 2.0
+FatigueResetTime = 30
+
+[Context Manager]
+
+# Context expiration time in seconds
+GuildExpirationTime = 1800
+RaidExpirationTime = 1800
+PartyExpirationTime = 900
+# All other context expiration time - open world, RPG NPC chat, etc
+WorldExpirationTime = 600
+# Maximum number of messages stored in context manager per channel
+MaxMessagesPerChannel = 50
+# How often context is pruned
+PruneInterval = 300
+
+# Typing delay settings
+TypingMinSpeed = 50
+TypingMaxSpeed = 150
+TypingHesitationChance = 0.05
+TypingHesitationMultiplier = 2.0
+TypingSpaceMultiplier = 0.5
+ThinkingMinDelay = 2.0
+ThinkingMaxDelay = 4.0
+
+[Attention Manager]
+
+# How long bot retains focused attention after being addressed
+DirectedAttentionDuration = 15
+# How long bot retains passive attention after being mentioned
+MentionedAttentionDuration = 10
+# Chance bot will not ignore other bots when not explicitly addressed or mentioned
+BotToBotReplyChance = 100
