--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,6 @@
-blinker==1.9.0
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-diskcache==5.6.3
 Flask==3.1.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.5
-joblib==1.4.2
-llama_cpp_python==0.3.6
-MarkupSafe==3.0.2
+llama_cpp_python
 nltk==3.9.1
 numpy==2.2.1
-RapidFuzz==3.12.1
-regex==2024.11.6
-requests==2.32.3
-tqdm==4.67.1
-typing_extensions==4.12.2
-urllib3==2.3.0
-Werkzeug==3.1.3
+rapidfuzz==3.12.2
+sortedcontainers==2.4.0
