implemented caching of LLM output for RPG chat

--- a/prompts.conf
+++ b/prompts.conf
@@ -6,7 +6,7 @@ PrePromptRaid = In {expansion}, a group of {member_count} players in a raid grou
 PrePromptDirectMulti = In {expansion}, a group of {member_count} players standing next to each other are having a discussion in {location}.
 PrePromptDirectSingle = In {expansion}, the players {speaker_names} and {sender_names} are standing next to each other are having a discussion in {location}.
 PrePromptWhisper = In {expansion}, the players {speaker_names} and {sender_names} are talking to each other in a private chat.
-PrePromptWorldChannel = In {expansion}, random players on the server are having a discussion in the {channel_label} channel.
+PrePromptChannel = In {expansion}, random players on the server are having a discussion in the {channel_label} channel.
 
 PromptParticipants = \## The following characters have recently participated in the conversation:\n\n{participants}
 PromptSingleSenderSingleMessage = \## The most recent message is from the character {sender_names}.
@@ -32,8 +32,8 @@ PostPromptConversationContinues = \### The conversation continues below:
 # Special prompts for RPG chat (bot to NPC)
 PrePromptRpg = In {expansion}, in {location} stands {bot_name}, a level {bot_level} {bot_gender} {bot_race} {bot_class}. Standing in front of {bot_name} is {npc_full_name}, a level {npc_level} {npc_gender} {npc_race} {npc_faction} {npc_class}.
 PromptRpg = In {expansion} in {location} stands {bot_name}, a level {bot_level} {bot_gender} {bot_race} {bot_class}. Standing nearby is {npc_type} {npc_name} {npc_subname} a level {npc_level} {npc_gender} {npc_race} {npc_faction} {npc_class}. Do not include any explanations, meta-commentary, or chain-of-thought processes. Answer as a roleplaying character.
-PromptRpgDetails = Detailed character info for {bot_name}:\n\n{bot_info}\n\nDetailed character info for {npc_name}:\n\n{npc_info}
-PromptRpgInstructions = You are to role-play as the character {speaker_name}, and reply to {sender_name}. Speak only as {speaker_name}.
+PromptRpgDetails = \## Detailed character info for {bot_name}:\n\n{bot_info}\n\n## Detailed character info for {npc_name}:\n\n{npc_info}
+PromptRpgInstructions = \### You are to role-play as the characters {speaker_name} and {sender_name}, and continue the conversation.
 PromptRpgChatTopic = \## This is the current topic of discussion:\n\n{chat_topic}
-PostPromptRpg = \### Now, write your message as {speaker_name}. Remember to speak as {speaker_name} only:\n\n{speaker_name}:
-PostPromptRpgGoodbye = \### Now, it is time for you to leave. Write your goodbye message as {speaker_name}. Remember to speak as {speaker_name} only:\n\n{speaker_name}:
+PostPromptRpg = \### Write your responses in the format of the character\'s name followed by a colon, followed by the character\'s dialog. Start by speaking as {speaker_name}, and then reply as {sender_name}. Continue the responses between the two characters.\n\n{speaker_name}:
+PostPromptRpgGoodbye = \### Now, it is time for {bot_name} to leave. Write your goodbye message as {speaker_name}.\n\n{speaker_name}:
