--- a/zyria.conf
+++ b/zyria.conf
@@ -25,10 +25,16 @@ Threads			= 6
 # Blocked characters to tokenize for improved LLM output quality
 BlockedTokens = -()[]*<>/\&^#@_|`~$;
 
+MainQueueSize = 100
+RpgQueueSize = 20
 BaseTokensPerSpeaker = 30
 TokensDialogueFactor = 1.5
 MinTokens = 50
 MaxTokens = 150
+# Number of virtual speakers to assume when estimating token usage for RPG cached conversations
+RpgVirtualSpeakers = 3 
+# Time in seconds until outdated RPG requests are cancelled
+MaxRpgRequestAge = 15
 
 [Prompt Builder]
 
@@ -54,6 +60,7 @@ QueueSleepWakeTime = 45
 OutputMaxPauseTime = 5
 FatigueMultiplier = 2.0
 FatigueResetTime = 30
+MaxBatchSize = 6
 
 [Context Manager]
 
