reverted cached RPG responses and implemented dual request RPG chat pairs instead. Unified cancelling requests and fixed bots being stuck in busy state

--- a/prompts.conf
+++ b/prompts.conf
@@ -33,7 +33,7 @@ PostPromptConversationContinues = \### The conversation continues below:
 PrePromptRpg = In {expansion}, in {location} stands {bot_name}, a level {bot_level} {bot_gender} {bot_race} {bot_class}. Standing in front of {bot_name} is {npc_full_name}, a level {npc_level} {npc_gender} {npc_race} {npc_faction} {npc_class}.
 PromptRpg = In {expansion} in {location} stands {bot_name}, a level {bot_level} {bot_gender} {bot_race} {bot_class}. Standing nearby is {npc_type} {npc_name} {npc_subname} a level {npc_level} {npc_gender} {npc_race} {npc_faction} {npc_class}. Do not include any explanations, meta-commentary, or chain-of-thought processes. Answer as a roleplaying character.
 PromptRpgDetails = \## Detailed character info for {bot_name}:\n\n{bot_info}\n\n## Detailed character info for {npc_name}:\n\n{npc_info}
-PromptRpgInstructions = \### You are to role-play as the characters {speaker_name} and {sender_name}, and continue the conversation.
+PromptRpgInstructions = \### You are to role-play as the characters {bot_name} and {npc_name}, and continue the conversation.
 PromptRpgChatTopic = \## This is the current topic of discussion:\n\n{chat_topic}
-PostPromptRpg = \### Write your responses in the format of the character\'s name followed by a colon, followed by the character\'s dialog. Start by speaking as {speaker_name}, and then reply as {sender_name}. Continue the responses between the two characters.\n\n{speaker_name}:
-PostPromptRpgGoodbye = \### Now, it is time for {bot_name} to leave. Write your goodbye message as {speaker_name}.\n\n{speaker_name}:
+PostPromptRpg = \### Write your responses in the format of the character\'s name followed by a colon, followed by the character\'s dialog. Start by speaking as {bot_name}, and then reply as {npc_name}. Continue the responses between the two characters.\n\n{bot_name}:
+PostPromptRpgGoodbye = \### Now, it is time for {bot_name} to leave. Write your goodbye message as {bot_name}.\n\n{bot_name}:
