--- a/zyria.conf
+++ b/zyria.conf
@@ -31,8 +31,8 @@ BaseTokensPerSpeaker = 30
 TokensDialogueFactor = 1.5
 MinTokens = 50
 MaxTokens = 150
-# Number of virtual speakers to assume when estimating token usage for RPG cached conversations
-RpgVirtualSpeakers = 3 
+# Max tokens for bot/NPC RPG conversations
+RpgMaxTokens = 100 
 # Time in seconds until outdated RPG requests are cancelled
 MaxRpgRequestAge = 15
 
@@ -61,6 +61,8 @@ OutputMaxPauseTime = 5
 FatigueMultiplier = 2.0
 FatigueResetTime = 30
 MaxBatchSize = 6
+# Time in seconds to wait for second request in RPG request pair
+RpgPairTimeout = 3
 
 [Context Manager]
 
