fixed batch size limit, added sanity check to LLM parsing, several improvements to RPG chat, RPG chat has reading delays rather than typing delays

--- a/zyria.conf
+++ b/zyria.conf
@@ -18,7 +18,7 @@ MemoryDir = memory
 [LLM Manager]
 
 ModelPath		= models/Llama-3.1-Techne-RP-8b-v1_Q4_K_M.gguf
-ContextTokens	= 8192
+ContextTokens	= 4096
 GPULayers		= -1
 Threads			= 6
 
@@ -32,7 +32,7 @@ TokensDialogueFactor = 1.5
 MinTokens = 50
 MaxTokens = 150
 # Max tokens for bot/NPC RPG conversations
-RpgMaxTokens = 100 
+RpgMaxTokens = 150 
 # Time in seconds until outdated RPG requests are cancelled
 MaxRpgRequestAge = 15
 
@@ -60,9 +60,9 @@ QueueSleepWakeTime = 45
 OutputMaxPauseTime = 5
 FatigueMultiplier = 2.0
 FatigueResetTime = 30
-MaxBatchSize = 6
+MaxBatchSize = 4
 # Time in seconds to wait for second request in RPG request pair
-RpgPairTimeout = 3
+RpgPairingTimeout = 2.0
 
 [Context Manager]
 
