restored pause queues for typing, blocked extra open-world requests not in channel members, adjusted threshold defaults

--- a/zyria.conf
+++ b/zyria.conf
@@ -63,6 +63,11 @@ FatigueResetTime = 30
 MaxBatchSize = 4
 # Time in seconds to wait for second request in RPG request pair
 RpgPairingTimeout = 2.0
+# Number of pending requests allowed for each channel type
+# Default covers Trade, LocalDefense, General, and LookingForGroup
+RpgRequestThreshold = 4
+WorldRequestThreshold = 6
+DefaultRequestThreshold = 5
 
 [Context Manager]
 
@@ -78,8 +83,8 @@ MaxMessagesPerChannel = 50
 PruneInterval = 300
 
 # Typing delay settings
-TypingMinSpeed = 50
-TypingMaxSpeed = 150
+TypingMinSpeed = 250
+TypingMaxSpeed = 400
 TypingHesitationChance = 0.05
 TypingHesitationMultiplier = 2.0
 TypingSpaceMultiplier = 0.5
