added similar names to the prompt.  adjusted some default settings

--- a/prompts.conf
+++ b/prompts.conf
@@ -9,6 +9,7 @@ PrePromptWhisper = In {expansion}, the players {speaker_names} and {sender_names
 PrePromptChannel = In {expansion}, random players on the server are having a discussion in the {channel_label} channel.
 
 PromptParticipants = \## The following characters have recently participated in the conversation:\n\n{participants}
+PromptSimilarNames = \## Warning: Some character names are very similar. Be especially careful not to confuse:\n{similar_names}
 PromptSingleSenderSingleMessage = \## The most recent message is from the character {sender_names}.
 PromptSingleSenderMultiMessage = \## The most recent messages are from the character {sender_names}.
 PromptMultiSenderMultiMessage = \## The most recent messages are from the characters {sender_names}.
