fixed context de-duplication at insertion, fixed player messages prioritzing channels more than once

--- a/zyria.conf
+++ b/zyria.conf
@@ -63,6 +63,8 @@ FatigueResetTime = 30
 MaxBatchSize = 4
 # Time in seconds to wait for second request in RPG request pair
 RpgPairingTimeout = 2.0
+# Time in seconds before a player message can prioritize a channel
+PrioritizationCooldown = 15
 # Number of pending requests allowed for each channel type
 # Default covers Trade, LocalDefense, General, and LookingForGroup
 RpgRequestThreshold = 4
