fixed deduplication for real. improved speaker prompt for player messages. restored thinking delay on subsequent messages in player responses

--- a/prompts.conf
+++ b/prompts.conf
@@ -25,8 +25,8 @@ PostPromptSingleResponse = \### Write your response as {speaker_names}. Write as
 PostPromptMultiResponse = \### Continue the conversation as {speaker_names} in the format of the character\'s name followed by a colon, followed by the character\'s dialog. Write multiple lines of dialog going back and forth between the characters. Speak only as the characters {speaker_names}.
 PostPromptInitiateChat = \### Write your message as {sender_names}. Write as much dialog as you naturally would until you have completed your point. Speak only as {speaker_names} and stay in character.
 PostPromptContinueChat = \### Continue the conversation as {speaker_names}. Write as much dialog as you naturally would until you have completed your point. Speak only as {speaker_names} and stay in character.
-PostPromptPlayer = \### {sender_names} has spoken in the chat most recently. You should respond to {sender_names} in this conversation, but do not speak as {sender_names_negative}, speak as {speaker_names} ONLY.
-PostPromptPlayerDirect = \### {sender_names} addressed {speaker_names} directly. {speaker_names} should respond to {sender_names} in this conversation, but do NOT speak as {sender_names_negative}.
+PostPromptPlayer = \### {sender_names} has spoken in the chat most recently. You should respond to {sender_names} in this conversation, but DO NOT SPEAK FOR {sender_names_negative}, speak as {speaker_names} ONLY.
+PostPromptPlayerDirect = \### {sender_names} addressed {speaker_names} directly. {speaker_names} should respond to {sender_names} in this conversation, but DO NOT SPEAK FOR {sender_names_negative}, speak as {speaker_names} ONLY.
 PostPromptConversationBegins\n\n### The conversation begins below:
 PostPromptConversationContinues = \### The conversation continues below:
 
