--- a/zyria.conf
+++ b/zyria.conf
@@ -92,6 +92,8 @@ WorldExpirationTime = 600
 MaxMessagesPerChannel = 50
 # How often context is pruned
 PruneInterval = 300
+# Number of recent context lines that will block duplicate entries
+DeduplicateLines = 15
 
 [Attention Manager]
 
